# axum_backend_crud

./: Cargo.toml
migrations/: 20260629153820_persons.sql  20260702121313_users.sql
src/: errors.rs  main.rs  routes.rs
src/database/: mod.rs  person_db.rs  users_db.rs
src/dtos/: mod.rs  person_dtos.rs  user_dtos.rs
src/handlers/: mod.rs  person_handlers.rs
src/models/: mod.rs  persons_model.rs  user_model.rs
src/router/: auth_routes.rs  mod.rs  person_routes.rs
src/utils/: password.rs  token.rs
