[package]
name = "axum_backend_crud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [ "postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid" ] }
tokio = { version = "1.52.3", features = ["full"] }
